# alpaca-simulators

./: .gitignore  .pre-commit-config.yaml  AlpacaDeviceAPI_v1.yaml  MANIFEST.in  README.md  analyze_completeness.py  parse_spec.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
api_docs/: camera_endpoints.txt  common_endpoints.txt  covercalibrator_endpoints.txt  dome_endpoints.txt  filterwheel_endpoints.txt  focuser_endpoints.txt  observingconditions_endpoints.txt  rotator_endpoints.txt  safetymonitor_endpoints.txt  switch_endpoints.txt  telescope_endpoints.txt
observatory_simulator/: config.yaml  main.py  state.py
observatory_simulator/api/: camera.py  common.py  covercalibrator.py  dome.py  filterwheel.py  focuser.py  observingconditions.py  rotator.py  safetymonitor.py  switch.py  telescope.py
observatory_simulator/templates/: index2.html.j2
src/alpaca_simulators/: __init__.py  endpoint_discovery.py  main.py  run_simulator.py  state.py
src/alpaca_simulators/api/: camera.py  common.py  covercalibrator.py  dome.py  filterwheel.py  focuser.py  observingconditions.py  rotator.py  safetymonitor.py  switch.py  telescope.py
src/alpaca_simulators/config/: template.yaml
src/alpaca_simulators/templates/: index2.html.j2
src/observatory_simulator/: __init__.py  config.py  endpoint_discovery.py  main.py  run_simulator.py  state.py
src/observatory_simulator/api/: camera.py  common.py  covercalibrator.py  dome.py  filterwheel.py  focuser.py  observingconditions.py  rotator.py  safetymonitor.py  switch.py  telescope.py
src/observatory_simulator/config/: template.yaml
tests/: test_config.py
tests/api/: test_telescope.py
