[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.14,<0.9.0"]

[project]
authors = [
  {name = "Peter Pederson"},
  {name = "David Degen"}
]
dependencies = [
  "fastapi",
  "uvicorn",
  "pyyaml",
  "cabaret",
  "jinja2",
  "python-multipart"
]
description = "Python based ASCOM Alpaca simulators for Observatory Control Software testing"
keywords = ["astronomy", "astrophysics", "telescope"]
license = "MIT"
name = "alpaca-simulators"
readme = "README.md"
requires-python = ">=3.10"
version = "0.2.4"

[project.optional-dependencies]
dev = ["ruff", "pre-commit", "pytest"]
test = ["pytest"]

[project.scripts]
alpaca-simulators = "alpaca_simulators.run_simulator:main"

[project.urls]
"Bug Tracker" = "https://github.com/ppp-one/alpaca-simulators/issues"
Homepage = "https://github.com/ppp-one/alpaca-simulators"
Source = "https://github.com/ppp-one/alpaca-simulators"

[tool.ruff]
exclude = ["*.yaml"]
extend-include = ["*.ipynb"]
line-length = 99

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F", "I001", "UP"]

[tool.uv.build-backend]
data = [
  "src/alpaca_simulators/config/"
]
module-name = "alpaca_simulators"
source-include = ["src/alpaca_simulators/config/default.yaml"]
